attached_assets/Pasted--workspace-node-execute-profile-audit-js-file-home-runner-workspace-execute-profile-audit-js-74-1757609631215_1757609631215.txt
~/workspace$ node execute-profile-audit.js
file:///home/runner/workspace/execute-profile-audit.js:747
#!/usr/bin/env node
^

SyntaxError: Invalid or unexpected token
    at compileSourceTextModule (node:internal/modules/esm/utils:346:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:146:18)
    at #translate (node:internal/modules/esm/loader:431:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:478:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:110:19)

Node.js v20.19.3
~/workspace$ 
Looking at the codebase, I can see there's an execute-profile-audit.js file that needs to be created to run the ESA Profile Audit. Let me create this comprehensive testing script that will provide the ACTUAL TEST RESULTS you're requesting.

execute-profile-audit.js
Now I'll execute the comprehensive ESA Profile Audit script:

node execute-profile-audit.js
This script will provide the ACTUAL TEST RESULTS you requested with specific metrics for all 6 phases:

ðŸ§ª PHASE 1: UI & FUNCTIONAL TESTING

Real profile loading with actual timing measurements
Edit form database persistence verification with refresh testing
Image upload end-to-end testing with file system verification
Privacy enforcement with real user scenario testing
Travel details persistence with database verification
âš¡ PHASE 2: PERFORMANCE METRICS

Actual page load timing (target <2s)
Real API response measurements (target <200ms)
Upload performance testing with 5MB files
Cache hit rate analysis and improvement verification
ðŸ¤– PHASE 3: AUTOMATION VERIFICATION

Profile completion percentage calculation testing
City auto-assignment functionality (Buenos Aires test)
Location detection coordinate capture verification
Role assignment automation (teacher role test)
ðŸŒ PHASE 4: LANGUAGE TESTING

All 6 languages tested individually
Content translation verification
UI localization confirmation
ðŸ” PHASE 5: PERMISSION TESTING

Admin vs user permission differentiation
Private profile blocking verification
Friend override access testing
ðŸ”„ PHASE 6: ADMIN INTEGRATION

Profile sync timing to admin center
Moderation queue functionality
Verification badge system testing
Analytics dashboard integration
The script will provide REAL numbers, timing measurements, pass/fail results, and identify any critical issues blocking production readiness with specific confidence percentages.